# bareos

./: .gitignore  .matrix.yml  .quality-gates.yml  CHANGELOG.md  CMakeLists.txt
cmake/: BareosCPM.cmake  BareosCcache.cmake  BareosCpmPackages.cmake  BareosExtractVersionInfo.cmake  BareosSetVariableDefaults.cmake  BareosVersion.cmake  CMakeDependencies.cmake  CPM.cmake  FindJsoncpp.cmake  FindgRPC.cmake  PrefixMap.cmake
contrib/misc/statefile-parser/: statefile.py
core/: CMakeLists.txt
core/cmake/: BareosCopyDllsToBinDir.cmake  BareosFindAllLibraries.cmake  BareosFindPrograms.cmake  FindAbsl.cmake
core/scripts/: CMakeLists.txt  bareos-ctl-dir-win.in  bareos-ctl-fd-win.in  bareos-ctl-sd-win.in  bareos_encode_string.py  btraceback.gdb  btraceback.gdb.in  btraceback.in
core/src/: CMakeLists.txt
core/src/benchmarks/: CMakeLists.txt  bsock.cc  restore_browser_stress_test.cc  time_stamps.cc
core/src/cats/: CMakeLists.txt  bvfs.cc  bvfs.h  cats.cc  cats.h  cats_types.h  db_conn.h  mysql_queries.inc  postgresql.cc  postgresql.h  postgresql_queries.inc  sql.cc  sql_create.cc  sql_delete.cc  sql_find.cc  sql_get.cc  sql_list.cc  sql_pooling.cc  sql_pooling.h  sql_query.cc  sql_update.cc  sqlite_queries.inc
core/src/console/: CMakeLists.txt  connect_to_director.cc  console.cc  console_conf.cc  console_conf.h
core/src/dird/: CMakeLists.txt  RpcREADME.md  admin.cc  archive.cc  auth_pam.cc  authenticate_console.cc  authenticate_console.h  autoprune.cc  backup.cc  bsr.cc  catreq.cc  check_catalog.cc  connection_plugin.cc  consolidate.cc  date_time.cc  date_time.h  date_time_bitfield.h  dbcheck.cc  dbcheck_utils.cc  dbcheck_utils.h  dir_plugins.cc  dir_plugins.h  dird.cc  dird.h  dird_conf.cc  dird_conf.h  director_jcr_impl.h  expand.cc  fd_cmds.cc  fd_sendfileset.cc  get_database_connection.cc  get_database_connection.h  getmsg.cc  inc_conf.cc  jcr_util.cc  job.cc  job.h  jobq.cc  jobq.h  jsonrpcrestore.cc  (+66 more)
core/src/filed/: CMakeLists.txt  accurate.cc  accurate.h  accurate_good.h  accurate_htable.cc  accurate_lmdb.cc  authenticate.cc  backup.cc  backup.h  compression.cc  crypto.cc  crypto.h  dir_cmd.cc  dir_cmd.h  fd_plugins.cc  fd_plugins.h  filed.cc  filed.h  filed_conf.cc  filed_conf.h  filed_jcr_impl.h  filed_utils.cc  filed_utils.h  fileset.cc  heartbeat.cc  heartbeat.h  report.cc  restore.cc  restore.h  socket_server.h  status.cc  verify.cc
core/src/findlib/: CMakeLists.txt  acl.cc  acl.h  attribs.cc  attribs.h  bfile.cc  bfile.h  create_file.cc  create_file.h  enable_priv.cc  find.cc  find.h  find_one.cc  find_one.h  hardlink.cc  hardlink.h  match.cc  match.h  mkpath.cc  shadow.h  shadowing.cc  xattr.cc  xattr.h
core/src/include/: allow_deprecated.h  baconfig.h  bareos_assert.h  dll_import_export.h  fileopts.h  filetypes.h  jcr.h  job_status.h  translate.h  version_numbers.h
core/src/lib/: CMakeLists.txt  address_conf.cc  address_conf.h  alist.h  attr.h  bareos_resource.cc  bareos_resource.h  base64.cc  base64.h  binflate.cc  bnet.cc  bnet.h  bnet_server_tcp.cc  bnet_server_tcp.h  bool_string.h  bpipe.h  breg.h  bsock.cc  bsock.h  bsock_tcp.cc  bsock_tcp.h  bsock_testfind.cc  bsock_testfind.h  bsys.cc  bsys.h  btime.cc  btime.h  channel.h  compression.cc  crypto_openssl.cc  daemon.cc  directory_search_tree.cc  directory_search_tree.h  display_report.cc  display_report.h  dlist.h  dmsg.cc  dmsg.h  edit.cc  edit.h  (+68 more)
core/src/lmdb/: CMakeLists.txt
core/src/ndmp/: CMakeLists.txt
core/src/plugins/filed/grpc/: CMakeLists.txt  bareos_api.cc  bareos_api.h  bareos_client.cc  bareos_client.h  grpc.cc  grpc_impl.cc  grpc_impl.h  grpc_python_module.cc  grpc_test_module.cc  plugin_service.cc  plugin_service.h  plugin_service_python.cc  plugin_service_python.h  test_module.h  test_module_python.h
core/src/plugins/filed/grpc/proto/: bareos.proto  common.proto  events.proto  plugin.proto
core/src/qt-tray-monitor/: authenticate.cc  tray_conf.cc  tray_conf.h
core/src/stored/: CMakeLists.txt  acquire.cc  acquire.h  ansi_label.cc  append.cc  askdir.cc  autochanger.cc  autochanger.h  bcopy.cc  bextract.cc  block.cc  bls.cc  bscan.cc  bsr.cc  bsr.h  btape.cc  butil.cc  dev.cc  dev.h  device.cc  device.h  device_resource.cc  device_resource.h  dir_cmd.cc  fd_cmds.cc  job.cc  label.cc  lock.cc  lock.h  mac.cc  match_bsr.h  mount.cc  mount.h  ndmp_tape.cc  ndmp_tape.h  new_reser.cc  read.cc  read_record.cc  read_record.h  record.h  (+19 more)
core/src/tests/: CMakeLists.txt  addresses_and_ports_config.cc  backend_parse.cc  bareos_test_sockets.cc  berrno_test.cc  bsock_mock.h  bsys_test.cc  catalog.cc  channel.cc  compat_old_conversion.cc  dedup.cc  dir_fd_connection.cc  droplet_backend.cc  fvec.cc  globbing_test.cc  kv_store.cc  lib_tests.cc  messages_resource.cc  multiplied_device_test.cc  new_dmsg.cc  new_lexer.cc  restoretree_test.cc  rpc_restore_browser.cc  run_on_incoming_connect_interval.cc  scheduler.cc  sd_backend.cc  sd_backend_tests.h  sd_reservation.cc  search_tree.cc  show_cmd_available_resources_equals_config_resources.cc  test_accurate.cc  test_bpipe.cc  test_bsnprintf.cc  test_bsock.cc  test_config_parser_dir.cc  test_fd_plugins.cc  test_poolmem.cc  test_sd_plugins.cc  thread_list.cc  tokenizer.cc
core/src/tools/: CMakeLists.txt  bdedup-estimate.cc  bdedupconf.cc  bdrecinf.cc  bscrypto.cc  bstat.cc  btestls.cc  dedup_conf.cc  dedupe.cc  drydedup.cc  dummysockets.cc  random_commands.cc  testfind.cc
debian/: bareos-filedaemon-python3-plugin.install.in  control  control.bareos-filedaemon-python-plugins-common  rules
docs/pkglists/: EL_7.x86_64  EL_8.x86_64  EL_9.x86_64  Fedora_35.x86_64  Fedora_36.x86_64  RHEL_8.x86_64  SLE_12_SP5.x86_64  SLE_15_SP2.x86_64  SLE_15_SP4.x86_64  SUSE_15.x86_64  xUbuntu_20.04.x86_64  xUbuntu_22.04.x86_64
src/jsonrpccpp/: CMakeLists.txt
src/stubgenerator/: CMakeLists.txt
systemtests/: CMakeLists.txt  ctest_custom_pretest-win.sh.in  environment.in
systemtests/cmake/: BareosSystemtestFunctions.cmake
systemtests/scripts/: cleanup  functions  setup  start_bareos.sh
systemtests/tests/: CMakeLists.txt
systemtests/tests/dedup/: functions  (+3 more)
(+246 files in other folders)
